Fixed root namespace

--- a/DandyDino.Elements.asmdef
+++ b/DandyDino.Elements.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "DandyDino.Elements",
-    "rootNamespace": "",
+    "rootNamespace": "DandyDino.Elements",
     "references": [],
     "includePlatforms": [
         "Editor"
